frontend-cd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: roboshop
  labels:
    tier: app
    component: frontend
    environment: dev
    project: roboshop
spec:
  type: LoadBalancer
  selector:
    tier: app
    component: frontend
    environment: dev
    project: roboshop
  ports:
    - protocol: http
      port: 8080
      targetPort: 8080
